--- a/Launcher/Launcher/Views/LauncherView.xaml
+++ b/Launcher/Launcher/Views/LauncherView.xaml
@@ -72,12 +72,10 @@
                  HorizontalAlignment="Stretch" Margin="0,0,0,0" ItemContainerStyle="{StaticResource MainWindowListBoxTemplate}" ItemsSource="{Binding ListBoxModules}">
             <ListBox.ItemTemplate>
                 <DataTemplate>
-                    <Grid>
-
                         <Button cal:Message.Attach="[Event Click] = [Action OpenModule($this)]">
-                            <TextBlock FontSize="15" Text="{Binding Name}" HorizontalAlignment="Center" VerticalAlignment="Center" />
+                            <TextBlock FontSize="15" Text="{Binding Name}" HorizontalAlignment="Left" TextAlignment="Left" TextWrapping="Wrap" Margin="-5"/>
                         </Button>
-
+                        
                         <!--<TextBlock Grid.Column="1" Text="{Binding Description}"></TextBlock>-->
                         <!--<ListBox x:Name="Category">
                             <ListBox.ItemTemplate>
@@ -88,9 +86,7 @@
                                 </DataTemplate>
                             </ListBox.ItemTemplate>
                         </ListBox>-->
-                    </Grid>
-
-
+        
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
