moon pdf transform ? мб будет не работать

--- a/Launcher/Launcher.Module.Document/Views/DocumentView.xaml
+++ b/Launcher/Launcher.Module.Document/Views/DocumentView.xaml
@@ -45,8 +45,8 @@
                 <Canvas.RenderTransform>
                     <MatrixTransform></MatrixTransform>
                 </Canvas.RenderTransform>-->
-            <moonPdfLib:MoonPdfPanel  x:Name="PdfPanel" />
-                    <!--RenderTransform="{StaticResource InitialMatrixTransform}" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled" IsManipulationEnabled="true"-->
+            <moonPdfLib:MoonPdfPanel  x:Name="PdfPanel" RenderTransform="{StaticResource InitialMatrixTransform}" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled" IsManipulationEnabled="true"/>
+                    
             <!--</Canvas>-->
         </Grid>
     </Grid>
