--- a/Launcher/Launcher.Module.Document/Views/MainDocView.xaml
+++ b/Launcher/Launcher.Module.Document/Views/MainDocView.xaml
@@ -17,16 +17,13 @@
         <!-- Название модуля в котором мы находимся сюда выводится будет тип -->
         <TextBlock x:Name="NameOfModuleTextBlock"  Grid.Column="1" Grid.Row="0" Background="DarkGray" Foreground="White" FontSize="22" Text="Модуль Нормативная Документация" />
         <!-- Стрелка на возворат.   cal:Message.Attach="[Event MouseDown] = [Action CloseWindow()]">-->
-        <StackPanel Grid.Column="0" Grid.Row="0" cal:Message.Attach="[Event MouseDown] = [Action CloseWindow()]" Background="DarkGray">
-            <Canvas>
-                <ContentControl Content="{StaticResource appbar_chevron_left}" Canvas.Top="0" Canvas.Left="0" Margin="0,-10,0,0"/>
+        <StackPanel x:Name="topStackPanel" Grid.Column="0" Grid.Row="0" cal:Message.Attach="[Event MouseDown] = [Action CloseWindow()]" Background="DarkGray">
+            <Canvas Width="76" Height="{Binding Height, ElementName=topStackPanel}" Margin="0,15" Clip="F1 M 0,0L 76,0L 76,76L 0,76L 0,0">
+                <Path Width="25.3333" Height="{Binding Height, ElementName=topStackPanel}"  Stretch="Fill" Fill="{DynamicResource BlackBrush}"
+              Data="F1 M 35.8724,37.6042L 39.0391,40.7708L 50.5182,51.8542L 40.2266,51.8542L 25.1849,37.6041L 40.2266,23.3542L 50.5182,23.3542L 39.0391,34.4375L 35.8724,37.6042 Z " />
             </Canvas>
         </StackPanel>
-        <!-- ContentGrid -->
-        <!--<Grid x:Name="ContentGrid"  Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2">
-            
-
-        </Grid>-->
+        
         <!-- ListBox C отображением левого меню навигации гОСТ Ост -->
         <ListBox x:Name="CategoryList" Grid.Row="1" Grid.Column="0" ItemContainerStyle="{StaticResource ListBoxItemCategory}" 
                  ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled"
@@ -37,10 +34,10 @@
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
-        
+
         <ContentControl x:Name="ActiveItem" Grid.Row="1" Grid.Column="1"></ContentControl>
 
-<!-- Тут должно быть список из модулей ГОСт или ОСТ Документы в общем говоря.-->
+        <!-- Тут должно быть список из модулей ГОСт или ОСТ Документы в общем говоря.-->
         <!--<ListBox Background="{DynamicResource AccentColorBrush}" x:Name="CategoryList" ItemContainerStyle="{StaticResource ListBoxItemCategory}" 
                  cal:Message.Attach="[Event SelectionChanged] = [Action Show]" ScrollViewer.VerticalScrollBarVisibility="Disabled" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
             <ListBox.ItemTemplate>
