--- a/Launcher/Launcher/Views/LauncherView.xaml
+++ b/Launcher/Launcher/Views/LauncherView.xaml
@@ -68,12 +68,13 @@
                 </Rectangle.OpacityMask>
             </Rectangle>
         </Grid>
-        <ListBox x:Name="ListBoxModules" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="7" Grid.RowSpan="7" ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+        <ListBox x:Name="ListBoxModules" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="7" Grid.RowSpan="7" ScrollViewer.HorizontalScrollBarVisibility="Disabled" 
+                 VerticalAlignment="Stretch" VerticalContentAlignment="Stretch"
                  HorizontalAlignment="Stretch" Margin="0,0,0,0" ItemContainerStyle="{StaticResource MainWindowListBoxTemplate}" ItemsSource="{Binding ListBoxModules}">
             <ListBox.ItemTemplate>
                 <DataTemplate>
-                        <Button cal:Message.Attach="[Event Click] = [Action OpenModule($this)]">
-                            <TextBlock FontSize="15" Text="{Binding Name}" HorizontalAlignment="Left" TextAlignment="Left" TextWrapping="Wrap" Margin="-5"/>
+                        <Button cal:Message.Attach="[Event Click] = [Action OpenModule($this)]" HorizontalContentAlignment="Left" >
+                            <TextBlock FontSize="15" Text="{Binding Name}" HorizontalAlignment="Left" TextAlignment="Left" TextWrapping="Wrap"  />
                         </Button>
                         
                         <!--<TextBlock Grid.Column="1" Text="{Binding Description}"></TextBlock>-->
