--- a/Launcher/Launcher.Module.Document/Views/HistoryView.xaml
+++ b/Launcher/Launcher.Module.Document/Views/HistoryView.xaml
@@ -30,8 +30,8 @@
             </ListBox.ItemsPanel>
             <ListBox.ItemTemplate>
                 <DataTemplate >
-                    <controls:Tile TiltFactor="1" Title="{Binding Name}" MinWidth="250" cal:Message.Attach="[Event Click] = [Action OpenDoc($this)]">
-                    </controls:Tile>
+                    <controls:Tile TiltFactor="1" Title="{Binding Name}" MinWidth="250" 
+                                   cal:Message.Attach="[Event Click] = [Action OpenDoc($this)]"/>
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
