--- a/Launcher/Launcher/App.xaml
+++ b/Launcher/Launcher/App.xaml
@@ -20,6 +20,8 @@
                 <ResourceDictionary Source="/Launcher.Core.Gui;component/Style/ListBox.xaml" />
                 <ResourceDictionary Source="/Launcher.Core.Gui;component/Style/Label.xaml"/>
                 <ResourceDictionary Source="/Launcher.Core.Gui;component/Style/TextBox.xaml"/>
+                <ResourceDictionary Source="/Launcher.Core.Gui;component/Style/ScrollBar.xaml"/>
+
                 <!--<ResourceDictionary Source="/Launcher.Core/UserControls/SquareButtonWithRoundedBorders.xaml"/>-->
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
