--- a/Launcher/Launcher.Module.Document/Views/HistoryView.xaml
+++ b/Launcher/Launcher.Module.Document/Views/HistoryView.xaml
@@ -7,18 +7,9 @@
              xmlns:cal="http://www.caliburnproject.org"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid Background="{DynamicResource AccentColorBrush}">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"></ColumnDefinition>
-            <ColumnDefinition Width="*"></ColumnDefinition>
-            <ColumnDefinition Width="*"></ColumnDefinition>
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*"></RowDefinition>
-            <RowDefinition Height="*"></RowDefinition>
-            <RowDefinition Height="*"></RowDefinition>
-        </Grid.RowDefinitions>
-        <ListBox x:Name="HistoryWrapPanels" Grid.ColumnSpan="3" Grid.RowSpan="3">
+    <Grid Background="White">
+
+        <ListBox x:Name="HistoryWrapPanels" Margin="20, 0, 0, 0">
 
             <ListBox.ItemsPanel>
                 <ItemsPanelTemplate>
