--- a/Launcher/Launcher.Module.Document/Views/DocumentView.xaml
+++ b/Launcher/Launcher.Module.Document/Views/DocumentView.xaml
@@ -36,16 +36,18 @@
         </StackPanel>
 
         <!--Сюда в старом образе у нас отображались данные -->
-        <Grid Grid.Row="1" Grid.Column="1" ManipulationStarting="UIElement_OnManipulationStarting" ManipulationDelta="UIElement_OnManipulationDelta">
-           <Grid.RenderTransform>
+        <Grid x:Name="gridViewerPDF"  Grid.Row="1" Grid.Column="1">
+            <WindowsFormsHost x:Name="_windowsFormsHost" HorizontalAlignment="Stretch" Height="auto" Margin="1" VerticalAlignment="Stretch" Width="auto"/>
+
+            <!--<Grid.RenderTransform>
                <MatrixTransform></MatrixTransform>
-           </Grid.RenderTransform>
+           </Grid.RenderTransform>-->
             <!-- TODO в IoC засунуть-->
             <!--<Canvas ManipulationStarting="UIElement_OnManipulationStarting" ManipulationDelta="UIElement_OnManipulationDelta">
                 <Canvas.RenderTransform>
                     <MatrixTransform></MatrixTransform>
                 </Canvas.RenderTransform>-->
-            <moonPdfLib:MoonPdfPanel  x:Name="PdfPanel" />
+            <!--<moonPdfLib:MoonPdfPanel  x:Name="PdfPanel" />-->
             <!-- RenderTransform="{StaticResource InitialMatrixTransform}" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled" IsManipulationEnabled="true" -->
                     
             <!--</Canvas>-->
