--- a/Launcher/Launcher.Module.Document/Views/DocumentView.xaml
+++ b/Launcher/Launcher.Module.Document/Views/DocumentView.xaml
@@ -37,7 +37,7 @@
 
         <!--Сюда в старом образе у нас отображались данные -->
         <Grid x:Name="gridViewerPDF"  Grid.Row="1" Grid.Column="1">
-            <WindowsFormsHost x:Name="_windowsFormsHost" HorizontalAlignment="Stretch" Height="auto" Margin="1" VerticalAlignment="Stretch" Width="auto"/>
+            <WindowsFormsHost x:Name="PdfPanel" HorizontalAlignment="Stretch" Height="auto" Margin="1" VerticalAlignment="Stretch" Width="auto"/>
 
             <!--<Grid.RenderTransform>
                <MatrixTransform></MatrixTransform>
