--- a/Launcher/Launcher.Module.EmergencyCard/Views/MainEmergencyCardView.xaml
+++ b/Launcher/Launcher.Module.EmergencyCard/Views/MainEmergencyCardView.xaml
@@ -3,9 +3,14 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             mc:Ignorable="d" Height="567.045" Width="721.591">
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="135"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <ListBox x:Name="CategoryEmergencyLisBox" Grid.Column="0" Background="AntiqueWhite"/>
+        <ListBox x:Name="ItemEmergencyListBox" Grid.Column="1" Background="Coral"></ListBox>
             
     </Grid>
 </UserControl>
