--- a/Launcher/Launcher.Core.Gui/Style/ListBox.xaml
+++ b/Launcher/Launcher.Core.Gui/Style/ListBox.xaml
@@ -138,19 +138,15 @@
         <Setter Property="FontSize" Value="22"/>
         <Setter Property="Foreground" Value="Black"/>
         <Setter Property="Background" Value="DarkGreen"/>
-        <Setter Property="MinHeight" Value="150"/>
+        <Setter Property="MinHeight" Value="50"/>
         <Setter Property="HorizontalAlignment" Value="Stretch"></Setter>
-        <Setter Property="HorizontalContentAlignment" Value="{Binding HorizontalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}"></Setter>
+        <Setter Property="HorizontalContentAlignment" Value="{Binding HorizontalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}"/>
         <Setter Property="VerticalContentAlignment" Value="{Binding VerticalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ListBoxItem}">
                     <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="1"/>
-                            <ColumnDefinition />
-                        </Grid.ColumnDefinitions>
-                        <Border BorderBrush="DarkGreen" CornerRadius="2" BorderThickness="2" Margin="3" Grid.Column="1">
+                        <Border BorderBrush="DarkGreen" CornerRadius="2" BorderThickness="2" Margin="3">
                             <StackPanel >
                                 <StackPanel.Style>
                                     <Style TargetType="{x:Type StackPanel}">
@@ -167,8 +163,7 @@
                                 <ContentPresenter >
                                     <ContentPresenter.Resources>
                                         <Style TargetType="{x:Type TextBlock}">
-                                            
-                                            <Setter Property="Margin" Value="10"></Setter>
+                                            <Setter Property="Margin" Value="10"/>
                                             <Setter Property="TextWrapping" Value="WrapWithOverflow"/>
                                             <Setter Property="HorizontalAlignment" Value="Center"/>
                                             <Setter Property="VerticalAlignment" Value="Center"/>
