--- a/Launcher/Launcher.Module.Document/Views/DocumentListView.xaml
+++ b/Launcher/Launcher.Module.Document/Views/DocumentListView.xaml
@@ -7,15 +7,11 @@
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid Background="{DynamicResource HighlightBrush}">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto" MaxWidth="50"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
-        <ListBox x:Name="FileNameList" ItemContainerStyle="{StaticResource DocumentListBoxStyle}" HorizontalContentAlignment="Stretch" Grid.Column="1">
+        <ListBox x:Name="FileNameList" ItemContainerStyle="{StaticResource DocumentListBoxStyle}" HorizontalContentAlignment="Stretch" >
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <Grid cal:Message.Attach="[Event MouseDown] = [Action ShowDoc($this)]" Background="{DynamicResource AccentColorBrush}">
-                        <TextBlock Text="{Binding Name}" TextWrapping="WrapWithOverflow"  
+                        <TextBlock Text="{Binding Name}" TextWrapping="WrapWithOverflow" Margin="0, 0, 0, 20"
                                    MaxWidth="{Binding ActualWidth, ElementName=FileNameList, Mode=OneWay}"/>
                     </Grid>
                 </DataTemplate>
