--- a/Launcher/Launcher.Module.Document/Views/DocumentView.xaml
+++ b/Launcher/Launcher.Module.Document/Views/DocumentView.xaml
@@ -38,7 +38,7 @@
         <!--Сюда в старом образе у нас отображались данные -->
         <Grid x:Name="gridViewerPDF"  Grid.Row="1" Grid.Column="1">
             <!--<WindowsFormsHost x:Name="PdfPanel" HorizontalAlignment="Stretch" Height="auto" Margin="1" VerticalAlignment="Stretch" Width="auto"/>-->
-            <WebBrowser x:Name="PdfBrowser"></WebBrowser>
+            <WebBrowser x:Name="PdfBrowser" Source="C:\2.html"></WebBrowser>
             <!--<Grid.RenderTransform>
                <MatrixTransform></MatrixTransform>
            </Grid.RenderTransform>-->
