--- a/Launcher/Launcher.Module.EmergencyCard/Views/EmergencyCardListView.xaml
+++ b/Launcher/Launcher.Module.EmergencyCard/Views/EmergencyCardListView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Launcher.Module.EmergencyCard.Views.EmergencyListView"
+﻿<UserControl x:Class="Launcher.Module.EmergencyCard.Views.EmergencyCardListView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -8,13 +8,14 @@
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid Background="{DynamicResource HighlightBrush}">
         <ListBox x:Name="EmergencyCardListBox" ItemContainerStyle="{StaticResource DocumentListBoxStyle}" HorizontalContentAlignment="Stretch">
-            <!--<ListBox.ItemTemplate>
+            <ListBox.ItemTemplate>
                 <DataTemplate>
-                    <StackPanel cal:Message.Attach="[Event MouseDown] = [Action ShowDoc($this)]" Background="{DynamicResource AccentColorBrush}">
+                    <!--<StackPanel cal:Message.Attach="[Event MouseDown] = [Action ShowDoc($this)]" Background="{DynamicResource AccentColorBrush}">
                         <TextBlock Text="{Binding Name}"/>
-                    </StackPanel>
+                    </StackPanel>-->
+                    <TextBlock Text="{Binding Name_Card}"></TextBlock>
                 </DataTemplate>
-            </ListBox.ItemTemplate>-->
+            </ListBox.ItemTemplate>
         </ListBox>
             
     </Grid>
